Se agrego vistas y modelos...

--- a/Administrador Proyectos/appsettings.json
+++ b/Administrador Proyectos/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Administrador_ProyectosContext": "Server=(localdb)\\mssqllocaldb;Database=Administrador_ProyectosContext-f79bdff5-ab20-4e32-9dea-9d3c6f7e2259;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
