--- a/Administrador Proyectos/appsettings.json
+++ b/Administrador Proyectos/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Administrador_ProyectosContext": "Server=(localdb)\\mssqllocaldb;Database=Administrador_ProyectosContext-9be8f1d3-2ad9-47ac-a3cd-68d4361bc272;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
